# src/shared/infra/http/routes/objects.routes.ts
@@ -1,6 +1,5 @@
 import { Router } from "express";
 import { CreateObjectController } from "../../../../modules/objects/useCases/createObject/CreateObjectController";
-import { UpdateObjectImageController } from "../../../../modules/objects/useCases/updateImageObject/UpdateObjectImageController";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
 
 import multer from "multer";
@@ -11,13 +10,11 @@ import { DeleteObjectController } from "../../../../modules/objects/useCases/del
 const objectsRouter = Router();
 
 const createObjectController = new CreateObjectController();
-const updateImageObjectController = new UpdateObjectImageController();
 const getObjectsController = new GetObjectsController();
 const deleteObjectController = new DeleteObjectController();
 
 objectsRouter.get("/", getObjectsController.handle);
-objectsRouter.post("/", ensureAuthenticated, createObjectController.handle);
-objectsRouter.patch("/:object_id", ensureAuthenticated, multer(multerConfig).single("image"), updateImageObjectController.handle);
+objectsRouter.post("/", ensureAuthenticated, multer(multerConfig).single("image"), createObjectController.handle);
 objectsRouter.delete("/:object_id", ensureAuthenticated, deleteObjectController.handle);
 
 export { objectsRouter };
